<resources>
    <string name="app_name">PANIC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio
    android.studio@android.com</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_Maps">Maps</string>
    <string name="menu_Contact">Contact Us</string>
    <string name="menu_Login">Log In</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_Contacts">Contacts</string>
    <string name="nav_title">Emergency App</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_trusted">trusted</string>
    <string name="title_activity_page1">page1</string>
    <string name="title_activity_trusts">trusts</string>


    <string name="show">Show</string>
    <string name="enter_phone">Enter a phone number</string>
    <string name="phone_status">"Phone Status: "</string>
    <string name="ringing">"RINGING, number: "</string>
    <string name="offhook">OFFHOOK</string>
    <string name="idle">IDLE</string>
    <string name="restarting_app">Restarting app</string>
    <string name="permission_not_granted">PERMISSION NOT GRANTED!</string>
    <string name="dial_number">"Phone Status: DIALING: "</string>
    <string name="failure_permission">Failure to obtain permission!</string>
    <string name="telephony_enabled">Telephony is enabled</string>
    <string name="telephony_not_enabled">"TELEPHONY NOT ENABLED! "</string>
    <string name="call">Call</string>
    <string name="make_a_call">Make a call</string>
    <string name="send_a_message">Send a message</string>
    <string name="enter_message_here">Enter message here</string>
    <string name="phone_disabled">Phone calling disabled.</string>
    <string name="retry">Retry</string>
    <string name="sms_disabled">SMS usage disabled</string>
    <string name="granted_permission">Permission Granted</string>
    <string name="title_activity_about__us">About_Us</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>
