<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
            >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_Maps"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_Maps" />
        <item
            android:id="@+id/nav_Contacts"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_Contacts" />
        <item
            android:id="@+id/nav_Settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_Settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_Login"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_Login" />
            <item
                android:id="@+id/nav_Contact"
                android:icon="@drawable/ic_call_black_24dp"
                android:title="About Us" />
        </menu>
    </item>

</menu>
